fixes button jump glithces

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -99,6 +99,13 @@ h3 {
   color: red;
 }
 
+.nomatch::after {
+  content: "Passwords do not match";
+}
+.nomatch {
+  color: red;
+}
+
 .red-border {
   border: 1px solid red;
 }
